Fix logo aspect ratio on mobile
Added height: auto to maintain proper aspect ratio when width is constrained on mobile devices.

--- a/components/Header/Header.module.sass
+++ b/components/Header/Header.module.sass
@@ -36,6 +36,7 @@
     img
         +m
             width: 153px
+            height: auto
 
 .button
     +m
